discussion/kv_engine/180495/180495_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53459: RangeScan add status code for vb-uuid mismatch

Using NMVB is ambiguous for the client and may trigger incorrect
actions, this commit adds a new status code so the vb-uuid mis-match
can be handled.

Change-Id: I9d40babde7cf2fc1be804d61227880b6f63398a7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-09-27 14:02:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-27 14:27:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20710/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:13: error: enumeration value "vbuuid_not_equal" not handled in switch [clang-diagnostic-switch]
    switch (code) {
            ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20710/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:13:
error: enumeration value "vbuuid_not_equal" not handled in switch [clang-diagnostic-switch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20710/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49746/ : FAILURE

Failure of GoogleTest "RangeScanKeyScan/RangeScanTest.scan_detects_vbucket_change/persistent_couchdb_full_eviction_key_scan":

<pre>
[ RUN      ] RangeScanKeyScan/RangeScanTest.scan_detects_vbucket_change/persistent_couchdb_full_eviction_key_scan
..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1183): error: Expected equality of these values:
  cb::engine_errc::not_my_vbucket
    Which is: not my vbucket
  mock_waitfor_cookie(cookie)
    Which is: range scan vbuuid unknown
[  FAILED  ] RangeScanKeyScan/RangeScanTest.scan_detects_vbucket_change/persistent_couchdb_full_eviction_key_scan, where GetParam() = ("persistent_couchdb", "full_eviction", "key_scan") (25 ms)
RangeScanKeyScan/RangeScanTest.scan_detects_vbucket_change/persistent_couchdb_full_eviction_key_scan
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49746/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10522/ : FAILURE

Compile error at [2022-09-27T14:11:58.900Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:12:
error: enumeration value ?vbuuid_not_equal? not handled in switch [-Werror=switch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10522/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10420/ : FAILURE

Compile error at [2022-09-27T14:21:51.202Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:13:
error: enumeration value "vbuuid_not_equal" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10420/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22692/ : FAILURE

Compile error at [2022-09-27T14:20:29.907Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:12:
error: enumeration value ?vbuuid_not_equal? not handled in switch [-Werror=switch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22692/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23079/ : FAILURE

Compile error at [2022-09-27T14:21:46.720Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:12:
error: enumeration value ?vbuuid_not_equal? not handled in switch [-Werror=switch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23079/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31101/ : FAILURE

Compile error at [2022-09-27T14:24:14.244Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:13:
error: enumeration value "vbuuid_not_equal" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31101/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23902/ : FAILURE

Compile error at [2022-09-27T14:16:34.444Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:13:
error: enumeration value "vbuuid_not_equal" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23902/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22091/ : FAILURE

Compile error at [2022-09-27T14:12:20.816Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1688:13:
error: enumeration value "vbuuid_not_equal" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22091/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19937/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41809/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
